<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EnterSMS">

    <com.fraggjkee.smsconfirmationview.SmsConfirmationView
        android:id="@+id/sms_code_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCompleteAuthorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:scv_symbolBorderColor="@color/border_color_sms"
        app:scv_symbolBorderCornerRadius="5dp"
        app:scv_symbolBorderWidth="1dp"
        app:scv_symbolHeight="70dp"
        app:scv_symbolWidth="70dp" />

    <TextView
        android:id="@+id/textViewEnterSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/SMS_code_text"
        android:textColor="@color/grey_code_sms"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sms_code_view"
        app:layout_constraintStart_toStartOf="@+id/sms_code_view" />

    <TextView
        android:id="@+id/textViewSmsWarning"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sms_send_warning_text"
        android:textAlignment="center"
        android:textColor="#979797"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms_code_view"
        app:lineHeight="24sp" />

    <Button
        android:id="@+id/buttonCompleteAuthorization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/background_color"
        android:fontFamily="@font/roboto"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/done_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>